--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image-edge": "^1.0.0-27769790.4b27db3",
     "@nuxtjs/tailwindcss": "^6.1.2",
     "nuxt": "3.0.0-rc.12"
+  },
+  "dependencies": {
+    "swiper": "^8.4.4"
   }
 }
